--- a/Camera/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Camera/Base.lproj/Main.storyboard
@@ -28,13 +28,22 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Camera" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9kU-80-3rG">
+                                <rect key="frame" x="177" y="438" width="60" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="cKV-wB-ngw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="3eC-f9-UNb"/>
                             <constraint firstAttribute="bottomMargin" secondItem="OOK-zh-RIn" secondAttribute="bottom" constant="-25" id="ATS-42-yhL"/>
+                            <constraint firstItem="9kU-80-3rG" firstAttribute="centerY" secondItem="cKV-wB-ngw" secondAttribute="centerY" id="J2c-YL-Ivf"/>
+                            <constraint firstItem="9kU-80-3rG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="177" id="JJs-eb-xru"/>
                             <constraint firstItem="cKV-wB-ngw" firstAttribute="leading" secondItem="OOK-zh-RIn" secondAttribute="leading" id="Kee-yg-gMP"/>
                             <constraint firstItem="cKV-wB-ngw" firstAttribute="trailing" secondItem="OOK-zh-RIn" secondAttribute="trailing" id="eVS-gz-Hzr"/>
+                            <constraint firstItem="9kU-80-3rG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="394" id="fCV-RM-DsW"/>
                             <constraint firstItem="OOK-zh-RIn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oGt-Px-IOS"/>
                             <constraint firstItem="OOK-zh-RIn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="799" id="tdc-dy-wJ9"/>
                             <constraint firstItem="cKV-wB-ngw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-44" id="uFn-65-1GY"/>
